Fixed broken styles
* fixed the font paths
* added a `min-height` for the invoice header

--- a/css/_fonts.styl
+++ b/css/_fonts.styl
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'hattori-hanzo';
-  src: url('./Hattori_Hanzo-webfont.eot');
-  src: url('./Hattori_Hanzo-webfont.eot?#iefix') format('embedded-opentype'),
-          url('./Hattori_Hanzo-webfont.woff') format('woff'),
-          url('./Hattori_Hanzo-webfont.ttf') format('truetype'),
-          url('./Hattori_Hanzo-webfont.svg#hattori_hanzolight') format('svg');
+  src: url('./fonts/Hattori_Hanzo-webfont.eot');
+  src: url('./fonts/Hattori_Hanzo-webfont.eot?#iefix') format('embedded-opentype'),
+          url('./fonts/Hattori_Hanzo-webfont.woff') format('woff'),
+          url('./fonts/Hattori_Hanzo-webfont.ttf') format('truetype'),
+          url('./fonts/Hattori_Hanzo-webfont.svg#hattori_hanzolight') format('svg');
   font-weight: normal;
   font-style: normal;
 }
