--- a/css/_invoice.styl
+++ b/css/_invoice.styl
@@ -15,6 +15,7 @@
   background-position: center top
   background-repeat: no-repeat
   background-size: 90px
+  min-height: 90px
   overflow: hidden
   width: 100%
   
